[Home]

Summary:ASTERISK-27551: [patch] ooh323cDriver: Fix typo in header guard.
Reporter:Alexander Traud (traud)Labels:patch
Date Opened:2018-01-05 06:17:49.000-0600Date Closed:2018-01-06 20:07:51.000-0600
Priority:TrivialRegression?
Status:Closed/CompleteComponents:Addons/chan_ooh323
Versions:13.18.5 15.1.5 Frequency of
Occurrence
Related
Issues:
Environment:Attachments:( 0) clang_ooh323_guard.patch
Description:The compiler _clang_ (5.0.1) reports:{code} ./ooh323cDriver.h:16:9: warning: '_OO_H323CDRIVER_H_' is used as a header guard here, followed by #define of a different macro [-Wheader-guard]
#ifndef _OO_H323CDRIVER_H_
       ^~~~~~~~~~~~~~~~~~
./ooh323cDriver.h:17:9: note: '__OO_H323DRIVER_H_' is defined here; did you mean '_OO_H323CDRIVER_H_'?
#define __OO_H323DRIVER_H_
       ^~~~~~~~~~~~~~~~~~
       _OO_H323CDRIVER_H_{code}
Comments:By: Friendly Automation (friendly-automation) 2018-01-06 20:07:52.069-0600

Change 7824 merged by Jenkins2:
ooh323cDriver: Fix typo in header guard.

[https://gerrit.asterisk.org/7824|https://gerrit.asterisk.org/7824]

By: Friendly Automation (friendly-automation) 2018-01-06 20:13:51.387-0600

Change 7822 merged by Jenkins2:
ooh323cDriver: Fix typo in header guard.

[https://gerrit.asterisk.org/7822|https://gerrit.asterisk.org/7822]

By: Friendly Automation (friendly-automation) 2018-01-06 20:17:32.223-0600

Change 7823 merged by Richard Mudgett:
ooh323cDriver: Fix typo in header guard.

[https://gerrit.asterisk.org/7823|https://gerrit.asterisk.org/7823]