ooh323cDriver: Fix typo in header guard.

ASTERISK-27551

Change-Id: I39ff66031e3373e895e2bc47b23a5e860ea4e012